Changelog
=========

1.0.1 (unreleased)
------------------

- Nothing changed yet.


1.0.0 (2013-09-24)
------------------

- Initial release