@@ -4,7 +4,8 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Stay on the footer management view after modifying the portlet blacklist status.
+  [mbaechtold]
 
 
 1.0.0 (2013-09-24)
